# caedral-python

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
src/caedral/: __init__.py  _sse.py  client.py  errors.py  http.py  types.py
src/caedral/resources/: __init__.py  audio.py  chat.py  embeddings.py  images.py  models.py  rerank.py  usage.py
tests/: conftest.py  helpers.py  test_integration.py
